--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^18.2.0",
     "react-router": "6",
     "react-router-dom": "6",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
     "@vitejs/plugin-react": "^2.1.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
